# ads-agent

./: .gitignore  .vercelignore  README.md  ad_system.py  index.py.bak  pyproject.toml  requirements.txt  vercel.json  技术文档_图片销售增强版.md  更新说明_v2.2_广告Banner优化.md  系统设计.md
api/: index.py
frontend/: README.md  UPDATE_NOTES.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
new_ui/: README.md  package-lock.json  package.json  vercel.json
new_ui/src/app/: globals.css  layout.tsx  page.tsx
new_ui/src/components/: ColorBends.tsx  PixelBlast.tsx  ShinyText.tsx
new_ui/src/components/Hyperspeed/: Hyperspeed.tsx
new_ui/src/components/SoftAurora/: SoftAurora.tsx
new_ui/src/components/ui/: GradientCards.tsx
